# Python_Test_Poetry_Env

./: .gitignore  pyproject.toml
demo_django/demo_django/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_main.py
